API KEY relacionada correctamente

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,9 @@
 # Postgres (para tu app / alembic / sqlalchemy)
 DATABASE_URL=postgresql+asyncpg://postgres:Samuel22.@localhost:5432/contabilidadcq
 
+# API Key para endpoints de ingesta (n8n)
+API_KEY=mi-api-key-secreta-2025
+
 # Configuración de Aplicación
 # APP_NAME=CONTABILIDADCQ API
 # APP_VERSION=1.0.0
