--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://18.220.253.46
-NEXT_PUBLIC_API_KEY=mi-api-key-secreta-2025
+VITE_API_BASE_URL=http://18.220.253.46
+VITE_API_KEY=mi-api-key-secreta-2025
