--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://18.220.253.46
+VITE_API_BASE_URL=https://q5wixwop2j.execute-api.us-east-2.amazonaws.com/v1
 VITE_API_KEY=mi-api-key-secreta-2025
