--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,9 @@ frontend:
       commands:
         - cd frontend
         - npm install
+        # Crear .env.production con variables de Amplify
+        - echo "VITE_API_BASE_URL=$VITE_API_BASE_URL" > .env.production
+        - echo "VITE_API_KEY=$VITE_API_KEY" >> .env.production
     build:
       commands:
         - npm run build
