--- a/amplify.yml
+++ b/amplify.yml
@@ -8,6 +8,10 @@ frontend:
         # Crear .env.production con variables de Amplify
         - echo "VITE_API_BASE_URL=$VITE_API_BASE_URL" > .env.production
         - echo "VITE_API_KEY=$VITE_API_KEY" >> .env.production
+        # Verificar contenido para debug
+        - echo "=== Contenido de .env.production ==="
+        - cat .env.production
+        - echo "=== Fin del archivo ==="
     build:
       commands:
         - npm run build
