Remove manual env file creation - use Amplify env vars directly

--- a/amplify.yml
+++ b/amplify.yml
@@ -5,15 +5,10 @@ frontend:
       commands:
         - cd frontend
         - npm install
-        # Crear .env.production con variables de Amplify
-        - echo "VITE_API_BASE_URL=$VITE_API_BASE_URL" > .env.production
-        - echo "VITE_API_KEY=$VITE_API_KEY" >> .env.production
-        # Verificar contenido para debug
-        - echo "=== Contenido de .env.production ==="
-        - cat .env.production
-        - echo "=== Fin del archivo ==="
     build:
       commands:
+        # Las variables VITE_API_BASE_URL y VITE_API_KEY ya están disponibles
+        # Amplify las inyecta automáticamente desde Environment Variables
         - npm run build
   artifacts:
     baseDirectory: frontend/build
