--- a/amplify.yml
+++ b/amplify.yml
@@ -11,9 +11,6 @@ frontend:
         # Amplify las inyecta automáticamente desde Environment Variables
         - npm run build
   artifacts:
-    baseDirectory: frontend/build
+    baseDirectory: frontend/dist
     files:
       - '**/*'
-  cache:
-    paths:
-      - frontend/node_modules/**/*
