--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,7 +2,7 @@
 # La URL de producción incluye /v1 porque AWS API Gateway lo maneja
 
 # URL del backend en producción (SIN /api/v1, el frontend lo agrega)
-VITE_API_BASE_URL=https://r5k8qt1z4e.execute-api.us-east-2.amazonaws.com/v1
+VITE_API_BASE_URL=https://r5k8qt1z4e.execute-api.us-east-2.amazonaws.com/v1/api/v1
 
 # API Key para producción (debe ser diferente en producción real)
 VITE_API_KEY=production-api-key-here
